--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,10 @@ body{font-family:Roboto;margin:0;}
 #name{display:inline-block;font-style: italic;font-size:70px;margin-bottom:25px;}
 hr{margin:0 auto;padding:0px;border-width:0;color:#F5F5F5;background-color:#F5F5F5;width:400px;}
 #desc{display:inline-block;font-weight:300;font-size:30px;margin-top:10px;}
-#content{background-color:white; padding: 16px;color:#212121;}
 .underline{text-decoration: underline;}
 .mdl-card {width: 320px;height: 320px;margin:0 auto;}
-.mdl-card__title {color: #fff;background:url('../img/oneplusx.png') bottom right no-repeat #000;background-size: 370px auto;}
+#card1 .mdl-card__title {color: #fff;background:url('../img/oneplusx.png') bottom right no-repeat #000;background-size: 370px auto;}
 a{text-decoration:none;}
 .mdl-mini-footer{margin-top:50px;}
+#card2 .mdl-card__title {color: #fff;background:url('../img/opengapps.png') bottom right no-repeat #009688;background-position:center;}
+a{text-decoration:none;}
