--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body{font-family:Roboto;margin:0;}
-#title{text-align:center;padding-top:100px;padding-bottom:50px;padding-left:5px;padding-right:5px;min-width:350px;}
+#title{text-align:center;padding-top:100px;padding-bottom:50px;padding-left:5px;padding-right:5px;min-width: 380px;width: 380px;}
 #name{display:inline-block;font-style: italic;font-size:70px;margin-bottom:25px;}
-hr{margin:0 auto;padding:0px;border-width:0;color:#F5F5F5;background-color:#F5F5F5;width:400px;}
+hr{margin:0 auto;padding:0px;border-width:0;color:#F5F5F5;background-color:#F5F5F5;}
 #desc{display:inline-block;font-weight:300;font-size:30px;margin-top:10px;}
 .underline{text-decoration: underline;}
 .mdl-card {width: 320px;height: 320px;margin:0 auto;}
